syntax = "proto3";

package record;

option go_package = "/pkg/pb";

import "google/protobuf/timestamp.proto";

service RecordService {
  rpc CreateRecord(CreateRecordRequest) returns (CreateRecordResponse) {}
  rpc UpdateRecord(UpdateRecordRequest) returns (UpdateRecordResponse) {}
  rpc GetRecord(FindOneRecordRequest) returns (FindOneRecordResponse) {}
  rpc ListRecords(FindAllRecordsRequest) returns (FindAllRecordsResponse) {}
  rpc RemoveRecord(DeleteRecordRequest) returns (DeleteRecordResponse) {}
}

message CreateRecordRequest {
  string timeExecuted = 1;
  string market = 2;
  float stopLoss = 3;
  float entryPrice = 4;
  float exitPrice = 5;
  uint64 journal = 6;
  float quantity = 7;
  string outcome = 8;
  string direction = 9;
  string baseInstrument = 10;
  string quoteInstrument = 11;
  float takeProfit = 12;
  string comments = 13;
  string strategy = 14;
  string timeClosed = 15;
  google.protobuf.Timestamp createdAt = 16;
  uint64 createdBy = 17;
}

message UpdateRecordRequest {
  uint64 id = 1;
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  google.protobuf.Timestamp createdAt = 17;
  uint64 lastUpdatedBy = 18;
}

message FindOneRecordRequest {
  uint64 id = 1;
}

message FindAllRecordsRequest {}

message DeleteRecordRequest {
  repeated string id = 1;
}

message CreateRecordResponse {
  string timestamp = 1;
  string level = 2;
  string message = 3;
  uint64 status = 4;
  Record data = 5;
  string error = 6;
}

message UpdateRecordResponse {
  string timestamp = 1;
  string level = 2;
  string message = 3;
  uint64 status = 4;
  Record data = 5;
  string error = 6;
}

message FindOneRecordResponse {
  uint64 status = 1;
  string error = 2;
  Record data = 3;
}

message FindAllRecordsResponse {
  uint64 status = 1;
  string error = 2;
  repeated Record data = 3;
}

message DeleteRecordResponse {
  uint64 status = 1;
  string message = 2;
  string level = 3;
  string error = 4;
  uint64 rowsAffected = 5;
}

message Record {
  uint64 id = 1;
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  google.protobuf.Timestamp createdAt = 17;
  uint64 createdBy = 18;
  uint64 lastUpdatedBy = 19;
}
